  AbstractDatabaseTest improved
  EntityTestUnit.getRandomString() now returns null instead of an empty string
  build.xml android jar contents fine tuned
  PropertyImpl.initializeValueFetcher() refactored
  States.StateGroupImpl, unnecessary call to Collections.synchronizedMap() on members, already properly synchronized
  EntityTablePanel.bindEvents(), bug fixed, header and table were not repainted on search state change, now listens to all individual search models
  Chinook demo, added not null constraints to some columns, unit tests failed randomly
  Property.ColumnValueConverter renamed to ValueConverter for consistency
  Property.ValueConverter and ValueFetcher moved to ColumnProperty
  EntityGeneratorModel improved
  Types.BIGINT partial support added
  ExceptionHandler.handleException() dialogParent parameter is now Window
  CancelException is now a RuntimeException descendant
  DefaultEntityEditModel, getModifiedEntities() added
  TableSelectionModel.TableModelProxy.vetoSelectionChange() added
  TableSelectionModel.TableModelProxy.getSize() renamed to getRowCount() for TableModel consistency
  FilteredTableModel extends TableSelectionModel.TableModelProxy
  DefaultTableSelectionModel uses TableModelProxy.vetoSelectionChange() to check if changes to selection should be vetoed
  AbstractFilteredTableModel.AbstractFilteredTableModelProxy removed
  ForeignKeySearchPanel constructor parameter includeToggleSearchEnabledButton added
  DefaultTableSelectionModelTest added
  EntityTestUnit.getRandomString() now returns a string of length maxLength if specified
  Configuration.SAVE_DEFAULT_USERNAME added
  UiUtil.displayInDialog() no longer available with both disposeOnEscape and closeEvent, since the latter now overrides the former
  UiUtil.chooseFileToSave() no remembers last directory used
  MethodControl now handles CancelException correctly
  DefaultExceptionHandler.unwrapException() now handles CancelException specifically